--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a class="nav-link" href="">Настройки и советы</a>
         </nav>
         <main>
-            <h1 class="top"><img class ="apple" src ="https://images.wallpaperscraft.ru/image/single/list_chb_chernyj_fon_120307_300x168.jpg"width = 200px; height = 120px/>Профессионалы советуют<img class ="apple2" src ="https://images.wallpaperscraft.ru/image/single/list_chb_chernyj_fon_120307_300x168.jpg"width = 200px; height = 120px/></h1>
+            <h1 class="top"><img class ="apple" src ="https://thumbs.gfycat.com/LargeDependentGalapagoshawk-size_restricted.gif"width = 200px; height = 120px/>Профессионалы советуют<img class ="apple2" src ="https://thumbs.gfycat.com/LargeDependentGalapagoshawk-size_restricted.gif"width = 200px; height = 120px/></h1>
             <section class="info">
                 <article class="post2">
                     <h1>Swords of Gargantua</h1>
