--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         </header>
         <nav>
             <a class="nav-link" href="">Гарнитура</a>
-            <a class="nav-link" href="">Игры</a>
+            <a class="nav-link" href="https://lk223.github.io/final3/">Игры</a>
             <a class="nav-link" href="">Настройки и советы</a>
         </nav>
         <main>
