--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <h1 class="glav"><img class="logo" src="https://image.freepik.com/free-photo/virtual-reality-glasses-on-black-background_101510-16.jpg">Игры </h1>
         </header>
         <nav>
-            <a class="nav-link" href="">Гарнитура</a>
+            <a class="nav-link" href="https://lk223.github.io/final/">Гарнитура</a>
             <a class="nav-link" href="https://lk223.github.io/final3/">Игры</a>
             <a class="nav-link" href="">Настройки и советы</a>
         </nav>
